--- a/src/Cars for sale.html
+++ b/src/Cars for sale.html
@@ -8,7 +8,7 @@
 <body>
  <!-- navbar -->
  <nav>
-    <div class="leftbox"></div>
+    <a class="leftbox" href="../src/index.html"></a>
     <div class="middlebox">
         <ul>
             <li><a href="../src/Cars for sale.html">Cars for sale</li></a>
