--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- navbar -->
     <nav>
-        <div class="leftbox"></div>
+        <a class="leftbox" href="../src/index.html"></a>
         <a href="../src/index.html"></a>
         <div class="middlebox">
             <ul>
@@ -21,7 +21,7 @@
 
             </ul>
         </div>
-        <div class="rightbox"><h4><button>sign in</button></h4></div>
+        <div class="rightbox"><button class="btn">sign in</button></div>
     </nav>
     <hr>
     <section>
@@ -67,13 +67,15 @@
             <br>
             <div class="boxprice-child1">
                 <div class="grandprice1"></div>
-                <div class="grandprice2"><h1>New Toyota Avalon</h1><button>call us</button> 
+                <div class="grandprice2"><h1>New Toyota Avalon</h1>
+                    <button style="background-color: red;padding: 15px 30px;border-radius: 3px;">call us</button> 
                 <hr> <h2>price-$200,000</h2>2019   45\65</div>
 
             </div>
             <div class="boxprice-child2">
                 <div class="grandprice11"></div>
-                <div class="grandprice22"><h1>Rolls royce</h1><button>call us</button> <hr><h2>price-$450,000</h2> 2019   45\65</div>
+                <div class="grandprice22"><h1>Rolls royce</h1>
+                    <button>call us</button> <hr><h2>price-$450,000</h2> 2019   45\65</div>
             </div>
             <div class="boxprice-child3">
                 <div class="grandprice12"></div>
